changing art.gnome.org to gnome-look.org

--- a/mate-control-center/capplets/appearance/data/appearance.ui
+++ b/mate-control-center/capplets/appearance/data/appearance.ui
@@ -819,7 +819,7 @@
                         <property name="no_show_all">True</property>
                         <property name="has_tooltip">True</property>
                         <property name="relief">none</property>
-                        <property name="uri">http://art.gnome.org/themes</property>
+                        <property name="uri">http://gnome-look.org/</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -1053,7 +1053,7 @@
                         <property name="receives_default">True</property>
                         <property name="no_show_all">True</property>
                         <property name="relief">none</property>
-                        <property name="uri">http://art.gnome.org/backgrounds</property>
+                        <property name="uri">http://gnome-look.org/</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
