--- a/mate-control-center/capplets/default-applications/mate-default-applications-properties.ui
+++ b/mate-control-center/capplets/default-applications/mate-default-applications-properties.ui
@@ -1066,6 +1066,141 @@
                     <property name="position">1</property>
                   </packing>
                 </child>
+
+			<!-- el file manager -- >
+				<child>
+					<object class="GtkVBox" id="filemanager_vbox">
+						<property name="visible">True</property>
+						<property name="spacing">6</property>
+						<child>
+							<object class="GtkLabel" id="filemanager_label">
+								<property name="visible">True</property>
+								<property name="xalign">0</property>
+								<property name="label" translatable="yes">File Manager</property>
+								<attributes>
+									<attribute name="weight" value="bold"/>
+								</attributes>
+							</object>
+							<packing>
+								<property name="expand">False</property>
+								<property name="fill">False</property>
+								<property name="position">0</property>
+							</packing>
+						</child>
+						<child>
+							<object class="GtkHBox" id="filemanager_hbox">
+								<property name="visible">True</property>
+								<property name="spacing">12</property>
+								<child>
+									<object class="GtkImage" id="filemanager_image">
+										<property name="visible">True</property>
+										<property name="yalign">0</property>
+									</object>
+									<packing>
+										<property name="expand">False</property>
+										<property name="fill">False</property>
+										<property name="position">0</property>
+									</packing>
+								</child>
+								<child>
+									<object class="GtkVBox" id="filemanager_options_vbox">
+										<property name="visible">True</property>
+										<property name="spacing">6</property>
+										<child>
+											<object class="GtkComboBox" id="filemanager_combobox">
+												<property name="visible">True</property>
+											</object>
+											<packing>
+												<property name="expand">False</property>
+												<property name="position">0</property>
+											</packing>
+										</child>
+										<child>
+											<object class="GtkTable" id="filemanager_options_table">
+												<property name="visible">True</property>
+												<property name="n_rows">2</property>
+												<property name="n_columns">2</property>
+												<property name="column_spacing">12</property>
+												<property name="row_spacing">6</property>
+												<child>
+													<object class="GtkLabel" id="filemanager_command_label">
+														<property name="visible">True</property>
+														<property name="sensitive">False</property>
+														<property name="xalign">0</property>
+														<property name="label" translatable="yes">Co_mmand:</property>
+														<property name="use_underline">True</property>
+														<property name="mnemonic_widget">filemanager_command_entry</property>
+													</object>
+													<packing>
+														<property name="x_options">GTK_FILL</property>
+														<property name="y_options"></property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkEntry" id="filemanager_command_entry">
+														<property name="visible">True</property>
+														<property name="can_focus">True</property>
+														<property name="tooltip_text" translatable="yes">All %s occurrences will be replaced with actual link</property>
+													</object>
+													<packing>
+														<property name="left_attach">1</property>
+														<property name="right_attach">2</property>
+														<property name="y_options"></property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkLabel" id="filemanager_exec_flag_label">
+														<property name="visible">True</property>
+														<property name="sensitive">False</property>
+														<property name="xalign">0</property>
+														<property name="label" translatable="yes">E_xecute flag:</property>
+														<property name="use_underline">True</property>
+														<property name="mnemonic_widget">filemanager_exec_flag_entry</property>
+													</object>
+													<packing>
+														<property name="top_attach">1</property>
+														<property name="bottom_attach">2</property>
+														<property name="x_options">GTK_FILL</property>
+														<property name="y_options"></property>
+													</packing>
+												</child>
+												<child>
+													<object class="GtkEntry" id="filemanager_exec_flag_entry">
+														<property name="visible">True</property>
+														<property name="can_focus">True</property>
+													</object>
+													<packing>
+														<property name="left_attach">1</property>
+														<property name="right_attach">2</property>
+														<property name="top_attach">1</property>
+														<property name="bottom_attach">2</property>
+														<property name="y_options"></property>
+													</packing>
+												</child>
+											</object>
+										<packing>
+											<property name="position">1</property>
+										</packing>
+									</child>
+								</object>
+								<packing>
+									<property name="position">1</property>
+								</packing>
+							</child>
+						</object>
+						<packing>
+							<property name="position">1</property>
+						</packing>
+						</child>
+					</object>
+					<packing>
+						<property name="expand">False</property>
+						<property name="position">1</property>
+					</packing>
+				</child>
+
+			< ! -- / el file manager -->
+
               </object>
               <packing>
                 <property name="position">2</property>
